--- a/index.css
+++ b/index.css
@@ -87,9 +87,10 @@ a {
 
 .primary-button {
   background-color: rgb(204, 160, 110);
-  border-radius: 5px;
-  padding: 7px;
+  border-radius: 12px;
+  padding: 8px;
   font-weight: 600;
+  text-align: center;
 }
 
 .primary-button:hover {
@@ -124,6 +125,10 @@ ul {
   flex-basis: 730px;
 }
 
+.nav-toogle{
+display: none;
+}
+
 /* header section  */
 
 .header-container {
@@ -135,6 +140,7 @@ ul {
 }
 
 .header-left {
+  max-width: 40vw;
   flex-basis: 30%;
 }
 
@@ -142,7 +148,11 @@ ul {
   padding-top: 20px;
 }
 
+.cart{
+  margin-top: 2rem;
+}
 .header-right {
+  width: 100%;
   flex-basis: 80%;
   display: grid;
   gap: 10px;
